--- a/gue.html
+++ b/gue.html
@@ -169,7 +169,7 @@ kontent -->
 							</a>
 						</div>
 						<div class="aku">
-						 <a href="http://">
+						 <a href="https://github.com/muslih2018/Game-blackjack">
 							<h5>Card Game</h5>
 				</a>
 						</div>
